# MXLang

./: Cargo.toml  prevtest.MXLA  test.MXLA
src/: main.rs
src/compile/: jit.rs  jit_varasgn.rs  mod.rs  test_jit.rs
src/lib/: mod.rs  standard.rs
src/lib/std/: std.sm
src/parser/: ast.rs  execute.rs  gram.pest
