[package]
name = "MXLang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openfile = "2.1.0"
pest = "2.1.3"
pest_derive = "2.1.0"
cranelift = "0.93.0"
target-lexicon = "0.12.6"
memmap2 = "0.5.10"
cranelift-module = "0.93.0"
cranelift-jit = "0.93.0"